Modified the examples with the new way of applying the normalization selecting the type.

--- a/neural_network/structural_mechanics/dynamic_damped_beam_nonlinear_cantilever/ProjectParameters.json
+++ b/neural_network/structural_mechanics/dynamic_damped_beam_nonlinear_cantilever/ProjectParameters.json
@@ -27,7 +27,8 @@
             "parameters"   :{
                 "objective": "all",
                 "input_log_name"  : "input_preprocessing.json",
-                "output_log_name" : "output_preprocessing.json"
+                "output_log_name" : "output_preprocessing.json",
+                "normalization_type": "soft_zero_one"
             }
         },
         {
