--- a/neural_network/structural_mechanics/beam_nonlinear_cantilever/ProjectParametersWithoutModel.json
+++ b/neural_network/structural_mechanics/beam_nonlinear_cantilever/ProjectParametersWithoutModel.json
@@ -10,7 +10,7 @@
             "layer_type"          : "input_layer",
             "layer_parameters"    :{
             "layer_name"          : "input",
-                "data_input"      : "data_beam_validation//training_in.dat"  
+                "data_input"      : "data//training_in.dat"  
             }  
         }},
         {
@@ -145,8 +145,8 @@
         "python_module" : "train_saved_model_process",
         "kratos_module" : "KratosMultiphysics.NeuralNetworkApplication",
         "parameters"    :{
-            "data_input"         : "data_beam_validation//training_in.dat",
-            "data_output"        : "data_beam_validation//training_out.dat",
+            "data_input"         : "data//training_in.dat",
+            "data_output"        : "data//training_out.dat",
             "model"              : "my_model",
             "epochs"             : 10000,
             "shuffle"	          : true,
