--- a/neural_network/structural_mechanics/beam_nonlinear_cantilever_two_variables/ProjectParameters.json
+++ b/neural_network/structural_mechanics/beam_nonlinear_cantilever_two_variables/ProjectParameters.json
@@ -19,7 +19,8 @@
             "parameters"   :{
                 "objective": "all",
                 "input_log_name"  : "input_preprocessing.json",
-                "output_log_name" : "output_preprocessing.json"
+                "output_log_name" : "output_preprocessing.json",
+                "normalization_type": "standard"
             }
         },
         {
