--- a/neural_network/structural_mechanics/dynamic_beam_nonlinear_cantilever/LSTMProjectParameters.json
+++ b/neural_network/structural_mechanics/dynamic_beam_nonlinear_cantilever/LSTMProjectParameters.json
@@ -22,12 +22,13 @@
             }
         },
         {
-            "python_module": "normalization_zero_one_process",
+            "python_module": "normalization_process",
             "kratos_module": "KratosMultiphysics.NeuralNetworkApplication",
             "parameters"   :{
                 "objective": "output",
                 "input_log_name"  : "input_preprocessing.json",
-                "output_log_name" : "output_preprocessing.json"
+                "output_log_name" : "output_preprocessing.json",
+                "normalization_type": "soft_zero_one"
             }
         },
         {
@@ -153,7 +154,7 @@
             "input_file"          : "data/training_in.npy",
             "target_file"         : "data/training_out.npy",
             "timesteps"           : 1500,
-            "lookback"            : 2,
+            "lookback"            : 3,
             "echo"                : 1,
             "predictions_file"    : "data/predictions",
             "save_format"         : "npy"            
