--- a/neural_network/structural_mechanics/lees_frame/ProjectParameters.json
+++ b/neural_network/structural_mechanics/lees_frame/ProjectParameters.json
@@ -14,12 +14,13 @@
             }
         },
         {
-            "python_module": "normalization_zero_one_process",
+            "python_module": "normalization_process",
             "kratos_module": "KratosMultiphysics.NeuralNetworkApplication",
             "parameters"   :{
                 "objective": "all",
                 "input_log_name"  : "input_preprocessing.json",
-                "output_log_name" : "output_preprocessing.json"
+                "output_log_name" : "output_preprocessing.json",
+                "normalization_type": "soft_zero_one"
             }
         },
         {
