--- a/neural_network/structural_mechanics/simple_pendulum/LSTMProjectParameters.json
+++ b/neural_network/structural_mechanics/simple_pendulum/LSTMProjectParameters.json
@@ -22,12 +22,13 @@
             }
         },
         {
-            "python_module": "normalization_soft_zero_one_process",
+            "python_module": "normalization_process",
             "kratos_module": "KratosMultiphysics.NeuralNetworkApplication",
             "parameters"   :{
                 "objective": "output",
                 "input_log_name"  : "input_preprocessing.json",
-                "output_log_name" : "output_preprocessing.json"
+                "output_log_name" : "output_preprocessing.json",
+                "normalization_type": "soft_zero_one"
             }
         },
         {
