--- a/co_simulation/CoSim_DevExamples/oscilating_cylinder_fsi/project_parameters_cosim_oscilating_cylinder_fsi.json
+++ b/co_simulation/CoSim_DevExamples/oscilating_cylinder_fsi/project_parameters_cosim_oscilating_cylinder_fsi.json
@@ -4,114 +4,91 @@
         "start_time" : 0.0,
         "end_time" : 10.0,
         "echo_level" : 0,
-        "print_colors" : true
+        "print_colors" : true,
+        "parallel_type" : "OpenMP"
     },
     "solver_settings" :
     {
-        "solver_type" : "gauss_seidel_strong_coupling",
+        "type" : "coupled_solvers.gauss_seidel_weak",
         "echo_level" : 0,
-        "num_coupling_iterations" : 1,
-        "start_coupling_time" : 0.0,
-        "predictor_settings" :
-        {
-            "predictor_type" : "linear_derivative_based",
-            "data_list"      :
-            [
-                {
-                    "solver": "fluid",
-                    "data_name"  : "disp_y",
-                    "derivative_data_name"  : "vel_y"
-                }
-
-            ]
-        },
-        "convergence_accelerator_settings" :
-        {
-            "type"          : "mvqn",
-            "data_list" :
-            [
-                {
-                    "solver"   : "fluid",
-                    "data_name"     : "disp_y"
-                }
-            ]
-        },
-        "convergence_criteria_settings" :
-        {
-            "data_list" :
-            [
-                {
-                    "solver"   : "fluid",
-                    "data_name"     : "disp_y",
-                    "abs_tolerance" : 1e-5,
-                    "rel_tolerance" : 1e-5
-                }
-            ]
-        },
-        "coupling_loop":
-        [
+        "predictors" : [
             {
-                "name": "fluid",
-                "input_data_list"  : [],
-                "output_data_list" : []
-            },
-            {
-                "name": "structure",
-                "input_data_list": [
-                    {
-                        "from_solver" : "fluid",
-                        "data_name"   : "force_y",
-                        "io_settings"   : {
-                            "io_options" : ["swap_sign"]
-                        }
-
-                    }
-                ],
-                "output_data_list": [
-                    {
-                        "to_solver" : "fluid",
-                        "data_name"   : "disp_y",
-                        "io_settings"   : { }
-                    }
-                ]
+                "type" : "average_value_based",
+                "solver"         : "fluid",
+                "data_name"      : "load"
             }
+        ],
+        "data_transfer_operators" : {
+            "transfer_forces" : {
+                "type" : "sum_distributed_to_single"
+            },
+            "transfer_disp" : {
+                "type" : "copy_single_to_distributed"
+            }
+        },
+        "coupling_sequence":
+        [
+        {
+            "name": "sdof",
+            "input_data_list": [
+                {
+                    "data"              : "load",
+                    "from_solver"       : "fluid",
+                    "from_solver_data"  : "load",
+                    "data_transfer_operator" : "transfer_forces",
+                    "data_transfer_operator_options" : ["swap_sign"]
+                }
+            ],
+            "output_data_list": [
+                {
+                    "data"           : "disp",
+                    "to_solver"      : "fluid",
+                    "to_solver_data" : "disp",
+                    "data_transfer_operator" : "transfer_disp"
+                }
+            ]
+        },
+        {
+            "name": "fluid",
+            "output_data_list": [],
+            "input_data_list": []
+        }
         ],
         "solvers" :
         {
             "fluid":
             {
-                "solver_type" : "kratos_fluid",
-                "input_file"  : "ProjectParametersCFD",
+                "type" : "solver_wrappers.kratos.fluid_dynamics_wrapper",
+                "solver_wrapper_settings" : {
+                    "input_file"  : "ProjectParametersCFD"
+                },
                 "data" : {
-                    "disp_y" : {
-                        "geometry_name" : "FluidModelPart.NoSlip2D_Interface",
-                        "data_identifier" : "MESH_DISPLACEMENT_Y",
-                        "data_format"     : "kratos_modelpart"
+                    "disp" : {
+                        "model_part_name" : "FluidModelPart.NoSlip2D_FSI_Interface",
+                        "variable_name" : "MESH_DISPLACEMENT_Y"
                     },
-                        "force_y" : {
-                        "geometry_name" : "FluidModelPart.NoSlip2D_Interface",
-                        "data_identifier" : "REACTION_Y",
-                        "data_format"     : "kratos_modelpart"
-                    },
-                    "vel_y" : {
-                        "geometry_name"   : "FluidModelPart.NoSlip2D_Interface",
-                        "data_identifier" : "VELOCITY_Y",
-                        "data_format"     : "kratos_modelpart"
+                    "load" : {
+                        "model_part_name" : "FluidModelPart.NoSlip2D_FSI_Interface",
+                        "variable_name" : "REACTION_Y"
                     }
                 }
             },
-            "structure" :
+            "sdof" :
             {
-                "solver_type" : "sdof",
-                "input_file"  : "ProjectParametersSDoF",
+                "type" : "solver_wrappers.sdof.sdof_solver_wrapper",
+                "solver_wrapper_settings" : {
+                    "input_file"  : "ProjectParametersSDoF"
+                },
                 "data" : {
-                    "disp_y" : {
-                        "data_identifier" : "DISPLACEMENT",
-                        "data_format"     : "scalar_value"
+                    "disp" : {
+                        "model_part_name" : "Sdof",
+                        "variable_name" : "SCALAR_DISPLACEMENT",
+                        "location"      : "model_part"
                     },
-                    "force_y" : {
-                        "data_identifier" : "LOAD",
-                        "data_format"     : "scalar_value"
+                    "load" : {
+                        "model_part_name" : "Sdof",
+                        "variable_name" : "SCALAR_FORCE",
+                        "location"      : "model_part"
                     }
                 }
             }
